Converted the todo app to use all the new code; starting to play with events, uncovering a few issues but things are okay.

--- a/todo.css
+++ b/todo.css
@@ -38,6 +38,10 @@ ul li .item {
     width: 45%;
 }
 
+.item.done { 
+    text-decoration: line-through
+}
+
 #entry-form {
     margin-left: 50%;
     margin-top: 8px;
